--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Crypto & Tech Insights
 email: contact@example.com
 description: Premium insights on Cryptocurrency, Economy, and Technology.
-baseurl: /general-blog
-url: https://jeonghun-project.github.io
+baseurl: "/general-blog"
+url: "https://jeonghun-project.github.io"
 permalink: /:year/:month/:day/:title/
 theme: null
 plugins:
