--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Crypto & Tech Insights
 email: contact@example.com
 description: Premium insights on Cryptocurrency, Economy, and Technology.
 baseurl: "/general-blog"
-url: "https://jeonghun-project.github.io"
+url: "https://toreta.uk"
 permalink: /:year/:month/:day/:title/
 theme: null
 plugins:
